--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Teste Para Portfólio Pessoal">
     <title>Leila Barros - Portfólio</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <body>
    <header class="cabecalho">
-    <img class="cabecalho" src="logo.png" alt="Logo do Portfólio Pessoal">
+    <img class="cabecalho" src="imagens/logo.png" alt="Logo do Portfólio Pessoal">
     <nav class="cabecalho-menu">
-        <a class="cabecalho-menu-item">Sobre Mim</a>
-        <a class="cabecalho-menu-item">Conhecimentos</a>
-        <a class="cabecalho-menu-item">Contato</a>
-        <a class="cabecalho-menu-item">Currículo</a>
+        <a class="cabecalho-menu-item" href="#">Sobre Mim</a>
+        <a class="cabecalho-menu-item" href="#">Conhecimentos</a>
+        <a class="cabecalho-menu-item" href="#">Contato</a>
+        <a class="cabecalho-menu-item" href="https://drive.google.com/file/d/1FRiT9FrfeU4pfL32F5jwqoBFZ9t_xZ_N/view">Currículo</a>
     </nav>
    </header> 
 
@@ -27,7 +27,7 @@
                 <h2 class="conteudo-principal-escrito-subtitulo">Estudante de Desenvolvimento Web Front-End</h2>
                 <button class="conteudo-principal-botao">Saiba Mais</button>
             </div>
-            <img class="conteudo-principal-imagem" src="main.gif" alt="Imagem De Uma Pessoa Programando">
+            <img class="conteudo-principal-imagem" src="imagens/main.gif" alt="Imagem De Uma Pessoa Programando">
         </section>
 
         <section class="conteudo-secundario">
@@ -36,21 +36,21 @@
                 1. Cursando <strong>Sistemas de Informação</strong> pela universidade UNIP.
             </p>
             <p class="conteudo-secundario-paragrafo">
-                2. Em busca de uma <strong>vaga de estágio</strong> para aprimorar meus conhecimentos.
+                2. Em busca de uma <strong>Vaga de Estágio</strong> para aprimorar meus conhecimentos.
             </p>
             <p class="conteudo-secundario-paragrafo">
                 3. Estudando as principais tecnologias do <Strong>Desenvolvimento Web Front-End:</Strong>
-                <ul>
-                    <li>HTML5</li>
-                    <li>CSS3</li>
-                    <li>Javascript</li>
+                <ul class="conteudo-secundario-paragrafo">
+                    <li><strong>HTML5</strong> → Hypertext Markup Language</li>
+                    <li><strong>CSS3</strong> → Cascading Style Sheets</li>
+                    <li><strong>Javascript</strong> → Programming Language </li>
                 </ul>
             </p>
         </section>
    </main>
 
    <footer class="rodape">
-    <img class="rodape-imagem" src="footer.png">
+    <a href="https://github.com/LeilaOBarros"> <img class="rodape-imagem" src="imagens/footer.png"> </a>
    </footer>
 </body>
 
